Overhead line edits

--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -365,7 +365,7 @@ margin-left: 38px;
             
 <details>
 <summary>Review criteria for claiming work outside Canada</summary>
- <p>In some cases, you may claim a portion of the salary or wages of employees who conducted SR&amp;ED work outside Canada. This portion is called the permissible salary.</p>
+ <p>In some cases, you may claim a portion of the salary or wages of employees who conducted SR&amp;ED work outside Canada. This portion is the permissible salary.</p>
 <p>The salary or wages you can claim for SR&amp;ED done outside Canada must meet <strong>all the following criteria</strong>:</p>
 <ul class="fa-ul">
   <li><span class="fas fa-check text-success fa-li fa-md"></span> The SR&amp;ED work must be done directly by an employee and not a contractor</li>
@@ -382,7 +382,7 @@ margin-left: 38px;
 <dt>Employees not directly engaged in SR&amp;ED</dt>	
 <dd>
 <p>If you use the traditional method, you may be able to claim the salary or wages of employees not directly engaged in SR&amp;ED work (such as clerical staff) as <a href="#h6">overhead and other expenditures</a>.</p>
-<p>If you use the proxy method, their salary or wages are included in the substitute (or proxy) amount.</p>
+<p>If you use the proxy method, their salary or wages are considered included in a substitute (or proxy) amount.</p>
 </dd>
 
 </dl>
@@ -438,13 +438,13 @@ margin-left: 38px;
   <dt>Traditional method</dt>
   <dd>Using the traditional method, you must identify all your overhead and other expenditures in your calculation of allowable expenditures</dd>
   <dt>Proxy method</dt>
-  <dd>Using the proxy method, you do not calculate your overhead expenses, but instead use a substitute (or proxy) amount in your calculation of allowable expenditures</dd>
+  <dd>Using the proxy method, you do not have to calculate your overhead expenses, instead you calculate a substitute (or proxy) amount that is deductible but will earn an ITC</dd>
 </dl>
  <p>Each method has its own advantages and disadvantages.</p>
 
  <details>
  <summary>Why use the traditional method</summary>         
-<p>The traditional  method is the only way to calculate overhead and other expenditures. It requires you to specifically identify each overhead cost that was directly related and incremental to SR&amp;ED work as "overhead and other expenditures".</p>    
+<p>The traditional  method allows you to claculate and deduct overhead and other expenditures. It requires you to specifically identify each overhead cost that was directly related and incremental to SR&amp;ED work as "overhead and other expenditures".</p>    
 <p><strong>Advantages of the traditional method</strong></p>
 <ul>
   <li>Overhead expenditures can be included in the  pool of deductible SR&amp;ED expenditures</li>
@@ -502,7 +502,7 @@ margin-left: 38px;
 <h2 id="h7">Third-party payments</h2>
 <p>A third-party payment for SR&amp;ED work carried out in Canada during the tax year may be claimed as an allowable expenditure if:</p>
             <ul>
-		    <li>the work is done by an approved entity or an third-party entity accepted by the CRA</li>
+		    <li>the work is done by an approved entity or a third-party entity accepted by the CRA</li>
  <details>
   <summary>Review CRA approved entities and third-party entities</summary>
 	 <p><strong>Approved entities</strong></p>
