--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -541,7 +541,7 @@ margin-left: 38px;
             </ul>-->
 
 <h3>How third-party payments differ from contract costs</h3>
-<p>Third-party payments are different from <a href="https://test.canada.ca/cra-arc/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html#h5">contract expeditures</a> in that the third party, such as a university or research institute, would have done the work anyway, regardless of your SR&amp;ED project.</p>
+<p>Third-party payments are different from <a href="https://test.canada.ca/cra-arc/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html#h5">contract expeditures</a> in that the third party, such as a university or research institute, may have done the work anyway, regardless of your SR&amp;ED project.</p>
             <details>
                <summary>Third-party payments vs. contracts for SR&amp;ED work</summary>
                <h4>Third-party payment</h4>
@@ -569,7 +569,6 @@ margin-left: 38px;
 <ul>
    <li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/salary-wages-policy.html">SR&amp;ED Salary or Wages Policy</a></li>
    <li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/materials-policy.html">Materials for SR&amp;ED Policy</a> </li>
-	   <li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/recapture-investment-tax-credit-policy.html">Recapture of SR&amp;ED Investment Tax Credit Policy</a> </li>
     <li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/production-runs-policy-1.html">SR&amp;ED During Production Runs Policy</a></li>
     <li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/while-developing-asset.html">SR&amp;ED while Developing an Asset Policy</a></li>
     <li><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/contract-expenditures-performed-on-behalf-a-claimant-policy.html">Contract Expenditures for SR&amp;ED Performed on Behalf of a Claimant Policy</a></li>
