--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-1.html
@@ -438,7 +438,7 @@ margin-left: 38px;
   <dt>Traditional method</dt>
   <dd>Using the traditional method, you must identify all your overhead and other expenditures in your calculation of allowable expenditures</dd>
   <dt>Proxy method</dt>
-  <dd>Using the proxy method, you do not have to calculate your overhead expenses, instead you calculate a substitute (or proxy) amount that is deductible but will earn an ITC</dd>
+  <dd>Using the proxy method, you do not have to calculate your overhead expenses, instead you calculate a substitute (or proxy) amount that is not deductible but will earn an ITC</dd>
 </dl>
  <p>Each method has its own advantages and disadvantages.</p>
 
