--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-2.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-2.html
@@ -89,7 +89,7 @@
             <li><a href="calculate-1.html" class="hidden-xs hidden-sm">Calculate  allowable expenditures</a>
                 <a href="calculate-1.html#gc-document-nav" class="visible-xs visible-sm">Calculate  allowable expenditures</a> 
             </li>
-            <li><a href="calculate-2.html" class="active" aria-current="page">Calculate  pool of deductibles</a></li>
+            <li><a href="calculate-2.html" class="active" aria-current="page">Calculate  pool of deductible expenditures</a></li>
             <li><a href="calculate-3.html" class="hidden-xs hidden-sm">Calculate  qualified expenditures</a>
                 <a href="calculate-3.html#gc-document-nav" class="visible-xs visible-sm">Calculate  qualified expenditures</a> 
             </li> 
@@ -114,7 +114,7 @@
 </div>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Calculate pool of deductibles</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Calculate pool of deductible expenditures</h1>
 
 <h2 class="h3">On this page</h2>
 <ul>
