--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-2.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-2.html
@@ -123,15 +123,16 @@
   <li><a href="#h3">Get support with deductible expenditures</a></li>    
 </ul>
 <h2 id="h1">Deduct some or all of your expenditures</h2>
-<p>Once you have calculated your allowable SR&amp;ED expenditures, you will need to deduct them against the business income that you earned.</p>
+<p>Once you have calculated your allowable SR&amp;ED expenditures, you calculate the available pool of deductible expenditures that you may deduct against the business income that you earned.</p>
 		 <p>To determine your pool of deductible expenditures, you need to adjust your allowable expenditures according to amounts you may have received or repaid.</p>
-<p>The pool concept gives you the option to deduct some or all of the allowable expenditures that are available for the tax year. Any balance you don&rsquo;t claim can be carried forward to future years. </p>
+<p>The pool concept gives you the option to deduct some or all of the available pool balance for the tax year. Any balance you don&rsquo;t claim can be carried forward to future years. </p>
 		 <p>If you used the <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#pmthd">proxy method</a> to calculate your allowable expenditures, the prescribed proxy amount (PPA) is <strong>not included</strong> in the pool of deductible expenditures. </p>
-
-<h3>If you&rsquo;re a partner in a partnership</h3>
+<details>
+<summary>If you&rsquo;re a partner in a partnership</summary>
 <p>In a partnership, the  pool of deductible expenditures is deducted at the partnership level.</p>
-		 <p> Partnerships must <strong>claim all of the available pool of deductible expenditures</strong> in the year. They may not carry forward a pool of expenditures to future tax years.</p>
+<p> Partnerships must <strong>claim all of the available pool of deductible expenditures</strong> in the year. They may not carry forward a pool of expenditures to future tax years.</p>
 <p>To learn more about how partnerships calculate their pool of deductibles, review <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4088/guide-form-t661-scientific-research-experimental-development-expenditures-claim-guide-form-t661.html#toc28">Partnerships, T4088 guide to SR&amp;ED Expenditures Claim</a>.</p>
+</details>	
 		 
 <h2 id="h2">Adjusting your pool of deductible expenditures </h2>
 
