--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1006,6 +1006,8 @@ html:lang(fr) .cnjnctn-or:before {
               <p>If you are an affected owner, you <strong>must file</strong> a return for each residential property that you own in Canada on December 31.</p>
 		    <p>You will also have to pay the tax unless you qualify for an exemption.</p>
 		     
+              <details class="mrgn-bttm-md">
+                <summary id="affected-owners">Examples of affected owners</summary>		     
         
                 <p>An <strong>affected owner</strong> includes, but is not limited to:</p>
                 <ul>
