--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-2.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-2.html
@@ -137,24 +137,24 @@
 <h2 id="h2">Adjusting your pool of deductible expenditures </h2>
 
 <h3>Deduct amounts you  receive</h3>
-<p>You will need to deduct any government and non-government assistance linked to your SR&amp;ED work that  you received, expect to receive, or are entitled to receive in the tax year from your total allowable SR&amp;ED  expenditures.</p>
+<p>You will need to deduct any government and non-government assistance linked to your allowable SR&amp;ED expenditures that  you received, expect to receive, or are entitled to receive in the tax year.</p>
 <p> This assistance may include: </p>
 <ul>
   <li>Provincial and territorial assistance (if not renounced in your province or territory)</li>
 	<ul>
-		<li>For detailed information, review <a href="https://canada-preview.adobecqms.net/en/revenue-agency/services/forms-publications/publications/t4088/guide-form-t661-scientific-research-experimental-development-expenditures-claim-guide-form-t661.html#ln429">Line 429, T4088 guide to SR&ED Expenditures Claim</a></li>
+		<li>For detailed information, review <a href="https://canada-preview.adobecqms.net/en/revenue-agency/services/forms-publications/publications/t4088/guide-form-t661-scientific-research-experimental-development-expenditures-claim-guide-form-t661.html#ln429">Line 429, T4088 Guide to SR&ED Expenditures Claim</a></li>
 	</ul>
 	  <li>Other government or non-government assistance</li>
   <li>Any SR&amp;ED investment tax credit (ITC) claimed the previous year (refunds, applied or carried back)</li>
-  
 </ul>
+		 
 <h3>Add repayments and other amounts</h3>
-<p>You will need to add any repayments you made in the tax year for government or non-government assistance that reduced your pool. </p>
-<p> You may also add the previous year&rsquo;s pool balance of deductible expenditures and any SR&amp;ED expenditure transfers or investment tax credit (ITC) recaptures, if applicable.</p>
+<p>You will need to add any repayments you made in the tax year for government or non-government assistance that reduced your pool previously. </p>
+<p> You must also add the previous year&rsquo;s pool balance of deductible expenditures and any SR&amp;ED expenditure pool transfers (amalgamation or wind-up) or investment tax credit (ITC) recaptured in the previous year, if applicable.</p>
 <details>             
 <summary>If you  have a negative pool balance</summary>
-<p> The pool of deductible SR&amp;ED expenditures at the beginning of a tax  year cannot be a negative amount. If there is a negative balance in the pool at the end of any tax year, you must bring it into that tax year&rsquo;s net income. </p>
-<p> This amount is also technically added to the pool to remove the negative  amount and results in an opening balance of zero.</p>
+<p>If there is a negative balance in the pool at the end of any tax year, you must bring it into that tax year&rsquo;s net income. </p>
+<p>The pool of deductible SR&amp;ED expenditures at the beginning of a tax year cannot be a negative amount.</p>
 </details>    
 <p>For detailed information about deductible expenditures, review <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/pool-deductible-expenditures-policy.html">Pool of Deductible SR&amp;ED Expenditures Policy</a>.</p>
 
