--- a/sred/scientific-research-experimental-development-tax-incentive-program/how.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/how.html
@@ -115,7 +115,7 @@
     <p>Choose the proxy or traditional method, and determine which expenditures may be allowable  (salary or wages, materials, contracts, overhead, and third-party payments)</p>
     </li>
   <li>
-    <h3><a href="calculate-2.html">Calculate pool of deductibles</a></h3>
+    <h3><a href="calculate-2.html">Calculate pool of deductible expenditures</a></h3>
     <p>Determine your pool of deductible SR&amp;ED expenditures that you may deduct against your net income </p>
     </li>
   <li>
