sub nav line edit

--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready.html
@@ -100,11 +100,11 @@
             <li><a href="calculate-1.html" class="hidden-xs hidden-sm">Calculate allowable expenditures</a>
                 <a href="calculate-1.html#gc-document-nav" class="visible-xs visible-sm">Calculate  allowable expenditures</a> 
             </li>
-            <li><a href="calculate-2.html" class="hidden-xs hidden-sm">Calculate pool of deductibles</a>
-                <a href="calculate-2.html#gc-document-nav" class="visible-xs visible-sm">Calculate  pool of deductibles</a> 
+            <li><a href="calculate-2.html" class="hidden-xs hidden-sm">Calculate pool of deductible expenditures</a>
+                <a href="calculate-2.html#gc-document-nav" class="visible-xs visible-sm">Calculate  pool of deductible expenditures</a> 
             </li>
             <li><a href="calculate-3.html" class="hidden-xs hidden-sm">Calculate qualified expenditures</a>
-                <a href="calculate-3.html#gc-document-nav" class="visible-xs visible-sm">Calculate  qualified expenditures</a> 
+                <a href="calculate-3.html#gc-document-nav" class="visible-xs visible-sm">Calculate qualified expenditures</a> 
             </li>            
             <li><a href="calculate-4.html" class="hidden-xs hidden-sm">Get an investment tax credit (ITC)</a>
                 <a href="calculate-4.html#gc-document-nav" class="visible-xs visible-sm">Get an investment tax credit (ITC)</a> 
