--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1049,7 +1049,7 @@ html:lang(fr) .cnjnctn-or:before {
               <li>Specified Canadian corporation</li>
               <li>Partner of a specified Canadian partnership, or a trustee of a specified Canadian trust</li>
 
-<ul><li>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681245">Exemptions for specified Canadian partnerships, trusts and corporations</a></li></ul>
+<p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681245">Exemptions for specified Canadian partnerships, trusts and corporations</a></p>
 
 
             
