--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
@@ -87,13 +87,13 @@
 				<a href="get-form.html" class="visible-xs visible-sm">Get the T661 expenditures claim form</a> 
             </li>
             <li><a href="calculate-1.html" class="hidden-xs hidden-sm">Calculate  allowable expenditures</a>
-                <a href="calculate-1.html#gc-document-nav" class="visible-xs visible-sm">Calculate  allowable expenditures</a> 
+                <a href="calculate-1.html#gc-document-nav" class="visible-xs visible-sm">Calculate allowable expenditures</a> 
             </li>
             <li><a href="calculate-2.html" class="hidden-xs hidden-sm">Calculate  pool of deductibles</a>
-                <a href="calculate-2.html#gc-document-nav" class="visible-xs visible-sm">Calculate  pool of deductibles</a> 
+                <a href="calculate-2.html#gc-document-nav" class="visible-xs visible-sm">Calculate pool of deductible expenditures</a> 
             </li>
-            <li><a href="calculate-3.html" class="hidden-xs hidden-sm">Calculate  qualified expenditures</a>
-                <a href="calculate-3.html#gc-document-nav" class="visible-xs visible-sm">Calculate  qualified expenditures</a> 
+            <li><a href="calculate-3.html" class="hidden-xs hidden-sm">Calculate qualified expenditures</a>
+                <a href="calculate-3.html#gc-document-nav" class="visible-xs visible-sm">Calculate qualified expenditures</a> 
             </li> 
             <li><a href="calculate-4.html" class="active" aria-current="page">Get an investment tax credit (ITC)</a>     
             </li>
