--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1049,11 +1049,12 @@ html:lang(fr) .cnjnctn-or:before {
               <li>Specified Canadian corporation</li>
               <li>Partner of a specified Canadian partnership, or a trustee of a specified Canadian trust</li>
 
-<p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681245">Exemptions for specified Canadian partnerships, trusts and corporations</a></p>
+<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn4/exemptions-specified-canadian-partnerships-trusts-corporations.html#_Toc122681245">Exemptions for specified Canadian partnerships, trusts and corporations</a></p>
 
 
             
-              <li>new owner in the calendar year</li>
+              <li>New owner in the calendar year</li>
+		    <p><a href="">Exemption for new owners</a></p>
               <li>deceased owner, or a co-owner or personal representative of a deceased owner</li>
             </ul>
           </details>
