--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1063,6 +1063,24 @@ html:lang(fr) .cnjnctn-or:before {
             <summary>Occupant of the residential property</summary>
             <p>You may be exempt if the property is:</p>
             <div id="exp-4">
+
+
+  <ul class="cnjnctn-type-or cnjnctn-sm">
+      <li class="cnjnctn-col">
+        <p>Used as the <strong>primary place of residence</strong></p>
+      </li>
+      <li class="cnjnctn-col">
+        <p>Used for <strong>qualifying occupancy</strong></p>
+      </li>
+  </ul>
+
+<h3>Primary place of residence</h3>
+		    <p>A primary place of residence is a dwelling unit that is part of the residential property, occupied by you or your spouse or common-law partner, or for your child who is attending a designated learning institution.</p>
+<p>If you have more than one place of residence, your primary place of residence is the one that is first in order of importance to you.</p>
+<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423684">Primary place of residence</a>. </p>
+	<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683">Exemption for residential properties that are used a primary place of residence</a></p>
+                
+		    
               <ul>
                 <li>Used as the primary place of residence for you or your spouse or common-law partner, or for your child who is attending a designated learning institution</li>
 		      	<details>
