--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1074,13 +1074,13 @@ html:lang(fr) .cnjnctn-or:before {
       </li>
   </ul>
 
-<h4>Primary place of residence</h4>
+<h4 id="primary-res">Primary place of residence</h4>
 		    <p>A primary place of residence is a dwelling unit that is part of the residential property, occupied by you or your spouse or common-law partner, or for your child who is attending a designated learning institution.</p>
 <p>If you have more than one place of residence, your primary place of residence is the one that is first in order of importance to you.</p>
 <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423684">Primary place of residence</a></p>
 	<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683">Exemption for residential properties that are used a primary place of residence</a></p>
                 
-	<h4>Qualifying occupancy</h4>	
+	<h4 id="qual-occ">Qualifying occupancy</h4>	
 <p>Qualifying occupancy applies to situations where your ownership of a residential property has one or more qualifying occupancy periods totalling at least 180 days in the calendar year. </p>
 		    <p>A qualifying occupancy period is at least 1 month in a calendar year where certain individuals (qualifying occupants) have continuous occupancy. Qualifying occupancy periods can be longer than 1 month, but not shorter than 1 month.</p>
 
