--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -984,11 +984,7 @@ margin-left: 38px;
 	<li><h3>Part 4 - Exemption for primary place of residence</h3>
 		<p>Only owners who are <strong>individuals</strong> may qualify for this exemption.</p>
 		<p>To be eligible for this exemption, you must file the election in <a href="#part-3">Part 3</a>, Section 2 or 3.</p>
-		<details>
-			<summary>Primary place of residence</summary>
-			<p>This part applies to situations where a dwelling unit that is part of the residential property is occupied by an owner or certain members of the owner's family.</p>
-<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423684">What is a primary place of residence</a>. </p>
-	</details>	
+		<p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#primary-res">Primary place of residence</a></p>
 </li>
 
 
