--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1067,7 +1067,7 @@ html:lang(fr) .cnjnctn-or:before {
 
   <ul class="cnjnctn-type-or cnjnctn-sm">
       <li class="cnjnctn-col">
-        <p>Used as the primary place of residence</p>
+        <p>Used as a primary place of residence</p>
       </li>
       <li class="cnjnctn-col">
         <p>Used for qualifying occupancy</p>
