--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1094,6 +1094,12 @@ html:lang(fr) .cnjnctn-or:before {
                   <li>Your spouse or common-law partner, parent, or child who is a Canadian citizen or permanent resident</li>
                 </ul>
               </details>
+		    <details>
+	<summary class="mrgn-tp-md">Example of qualifying occupancy</summary>
+	<p>You own a residential property. Your parent, who is a Canadian citizen, lives at the property during the months of March - April, June - August, and November - December.</p>
+	<p>In 2023, they lived there for a total of 197 days, making them qualify for the exemption of qualifying occupany.</p>
+</details>
+
 		    <br>
 <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423684">Qualifying occupancy period</a></p>
 			  <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683">Exemption for residential properties that are used for qualifying occupancy</a></p>
