--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -991,25 +991,7 @@ margin-left: 38px;
 	
 	<li><h3>Part 5 - Exemption for qualifying occupancy</h3>
 		<p>To be eligible for this exemption, you must file the election in <a href="#part-3">Part 3</a>, Section 2 or 3.</p>
-		<details>
-			
-			<summary>Qualifying occupancy</summary>
-			<p>This part applies to situations where your ownership of a residential property has <strong>one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year.</p>
-			<p>A qualifying occupancy period is at least 1 month in a calendar year where certain individuals (qualifying occupants) have continuous occupancy. Qualifying occupancy periods can be longer than 1 month, but not shorter than 1 month. </p>
-
-<details>
-	<summary class="mrgn-tp-md">Example of qualifying occupancy</summary>
-	<p>You own a residential property. Your parent, who is a Canadian citizen, lives at the property during the months of March - April, June - August, and November - December.</p>
-	<p>In 2023, they lived there for a total of 197 days, making them qualify for the exemption of qualifying occupany.</p>
-</details>
-
-
-
-			
-			<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423684">What is a qualifying occupancy period</a>.</p>
-			
-			
-	</details>
+	<p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#qual-occ">Qualifying occupancy</a></p>
 		
 </li>
 
