--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1097,7 +1097,7 @@ html:lang(fr) .cnjnctn-or:before {
 		    <details>
 	<summary class="mrgn-tp-md">Example of qualifying occupancy</summary>
 	<p>You own a residential property. Your parent, who is a Canadian citizen, lives at the property during the months of March - April, June - August, and November - December.</p>
-	<p>In 2023, they lived there for a total of 197 days, making them qualify for the exemption of qualifying occupany.</p>
+	<p>In 2023, they lived there for a total of 197 days, making you qualify for the exemption of qualifying occupany.</p>
 </details>
 
 		    <br>
