--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -811,8 +811,11 @@ html:lang(fr) .cnjnctn-or:before {
 	  <p>If you qualify for an exemption, you must select the exemption on your return(s). If you qualify for an exemption, you will not have to pay the tax.</p>
     <p>If you share ownership with one or more co-owners who are also affected owners, <strong>each</strong> of you must file a separate return for the property, even if your respective ownership qualifies for an exemption.</p>
     <p>If you are not an affected owner, you are an <strong>excluded owner</strong>. Excluded owners do not have to file a return or pay the tax. </p>
-    <h2>Determine if you are an affected owner or an excluded owner</h2>
+  
+	  
+	  <h2>Determine if you are an affected owner or an excluded owner</h2>
     <p>Find out which type of owner you are based on your situation, and if you may qualify for an exemption from paying the tax.</p>
+	  
     <div class="wb-tabs mrgn-tp-lg">
       <div class="tabpanels">
         <details id="interactive">
@@ -894,27 +897,30 @@ html:lang(fr) .cnjnctn-or:before {
           </div>
           <div id="excluded-owner" tabindex="0" class="hidden">
             <div class="alert alert-info">
-              <h4 class="h3"><small>Your result is</small><br>
+              <h4 class="h3"><medium>Based on your choice, your result is</medium><br>
                 You are an excluded owner</h4>
-              <p>You are an excluded owner of a residential property in Canada, and you have <strong>no obligations or liabilities</strong> under the Underused Housing Tax Act.</p>
-              <p>You do not need to file a Underused Housing Tax return, unless your situation changes.</p>
+              <p>If you are an excluded owner, you have <strong>no obligations</strong> under the Underused Housing Tax Act. </p>
+              <p>You do not have to file a return or pay the tax unless your situation changes by December 31 of the calendar year.</p>
+		    <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681155">Excluded owners</a></p>
             </div>
           </div>
           <div id="unsure-owner" tabindex="0" class="hidden">
             <div class="alert alert-info">
-              <h4 class="h3"><small>Your result is</small><br>
-                You are unsure what type of owner you are</h4>
-              <p>To determine if you may need to file a Underused Housing Tax return, please contact the CRA.</p>
-              <p>You can find the phone numbers in the <a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/underused-housing-tax-technical-information.html">Underused Housing Tax technical information</a>.</p>
+              <h4 class="h3"><medium>Based on your choice, your result is</medium><br>
+                You are unsure</h4>
+              <p>If you are uncertain about your obligations under the Underused Housing Tax Act, you may request a ruling or interpretation about how the tax applies to your specific situation.</p>
+              <p><a href="https://test.canada.ca/cra-arc/subway/uht/contact.html#bymail">Contact us to make a request</a></p>
             </div>
           </div>
           <div id="affected-owner" class="wb-fieldflow-sub hidden gc-font-2019" data-wb-fieldflow='{"renderas": "radio", "noForm": true, "gcChckbxrdio":true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
             <div class="wb-fieldflow-header">
               <div class="gc-font-2019">
                 <div class="alert alert-info">
-                  <h4 class="h3"><small>Your result is</small><br>
+                  <h4 class="h3"><medium>Based on your choice, your result is</medium><br>
                     You are an affected owner</h4>
-                  <p>You are an affected owner of a residential property in Canada, and you have <strong>obligations</strong> under the Underused Housing Tax Act.</p>
+                  <p>If you are an affected owner, you <strong>must file</strong> a return for <strong>each</strong> residential property that you own in Canada on December 31. </p>
+			<p>You will also have to pay the tax unless you qualify for an exemption.</p>
+	  <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156">Affected owners</a></p>
                   <div data-ajax-replace="#affected-statement"><a href="#affected-statement">Filing a return as an affected owner</a></div>
                 </div>
                 <h4>There are exemptions</h4>
