--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -897,16 +897,16 @@ html:lang(fr) .cnjnctn-or:before {
           </div>
           <div id="excluded-owner" tabindex="0" class="hidden">
             <div class="alert alert-info">
-              <h4 class="h3"><medium>Based on your choice, your result is</medium><br>
+              <h4 class="h3"><small>Based on your choice, your result is</small><br>
                 You are an excluded owner</h4>
-              <p>If you are an excluded owner, you have <strong>no obligations</strong> under the Underused Housing Tax Act. </p>
+              <p>You have <strong>no obligations</strong> under the Underused Housing Tax Act. </p>
               <p>You do not have to file a return or pay the tax unless your situation changes by December 31 of the calendar year.</p>
 		    <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681155">Excluded owners</a></p>
             </div>
           </div>
           <div id="unsure-owner" tabindex="0" class="hidden">
             <div class="alert alert-info">
-              <h4 class="h3"><medium>Based on your choice, your result is</medium><br>
+              <h4 class="h3"><small>Based on your choice, your result is</small><br>
                 You are unsure</h4>
               <p>If you are uncertain about your obligations under the Underused Housing Tax Act, you may request a ruling or interpretation about how the tax applies to your specific situation.</p>
               <p><a href="https://test.canada.ca/cra-arc/subway/uht/contact.html#bymail">Contact us to make a request</a></p>
@@ -916,12 +916,12 @@ html:lang(fr) .cnjnctn-or:before {
             <div class="wb-fieldflow-header">
               <div class="gc-font-2019">
                 <div class="alert alert-info">
-                  <h4 class="h3"><medium>Based on your choice, your result is</medium><br>
+                  <h4 class="h3"><small>Based on your choice, your result is</small><br>
                     You are an affected owner</h4>
-                  <p>If you are an affected owner, you <strong>must file</strong> a return for <strong>each</strong> residential property that you own in Canada on December 31. </p>
+                  <p>You <strong>must file</strong> a return for <strong>each</strong> residential property that you own in Canada on December 31. </p>
 			<p>You will also have to pay the tax unless you qualify for an exemption.</p>
 	  <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156">Affected owners</a></p>
-                  <div data-ajax-replace="#affected-statement"><a href="#affected-statement">Filing a return as an affected owner</a></div>
+                
                 </div>
                 <h4>There are exemptions</h4>
                 <p>You can determine if you qualify for an exemption in one of two ways</p>
