--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -923,7 +923,7 @@ html:lang(fr) .cnjnctn-or:before {
 	  <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156">Affected owners</a></p>
                 
                 </div>
-                <h4>You may qualify for an exemption</h4>
+                <h4>Exemptions to paying the tax</h4>
                 <p>You <strong>must file</strong> an Underused Housing Tax return for the calendar year, <strong>even if</strong> you qualify for an exemption.</p>
                
 	      </div>
