--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -1030,7 +1030,7 @@ margin-left: 38px;
         <h2 class="h3 mrgn-tp-0" id="bymail">By mail</h2>
       </dt>
       <dd>
-        <p>If you want to request a ruling or an interpretation related to the underused housing tax.</p>
+        <p>If you want to request a ruling or an interpretation related to the Underused Housing Tax.</p>
         <p>GST/HST Ruling Directorate<br>
           Canada Revenue Agency<br>
           Place de Ville Tower A 5th floor<br>
@@ -1042,7 +1042,7 @@ margin-left: 38px;
         <h2 class="h3 mrgn-tp-0">By fax</h2>
       </dt>
       <dd>
-        <p>If you want to request a ruling or an interpretation related to the underused housing tax.</p>
+        <p>If you want to request a ruling or an interpretation related to the Underused Housing Tax.</p>
         <p><strong class="nowrap"><span class="fas fa-fax mrgn-rght-sm" aria-hidden="true"></span>1-418-566-0319</strong></p>
       </dd>
     </dl>
