updates per Chris' suggestions

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -135,6 +135,7 @@
                         </ul>
 
 <h3><mark>Determine which form to use</mark></h3>
+<p><mark>You will fill out <strong>either</strong> Form AB428 or Form T2203:</mark></p>
 <dl class="dl-horizontal">
   <dt><span class="far fa-file text-muted"></span> <span class="nowrap">Form AB428</span>, Alberta Tax and Credits</dt><dd>
   
@@ -202,12 +203,12 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
 		 
          <details class="mrgn-tp-md"><summary class="wb-toggle" data-toggle='{"print": "on"}'>Alberta tax rates for 2022 <span class="label label-info">Updated amount for 2022</span></summary>
          <p>The following tax rates are used in the calculation of your Alberta tax on taxable income:</p>
-         <ul class="fa-ul">
-<li><span class="nowrap">10% on</span> the portion of your taxable income that <span class="nowrap">is $134,238</span>&nbsp;or less, <strong>plus</strong></li>
-<li><span class="fas fa-plus text-muted fa-li"></span> <span class="nowrap">12% on</span> the portion of your taxable income that is more <span class="nowrap">than $134,238</span>&nbsp;but not more <span class="nowrap">than $161,086</span>, <strong>plus</strong></li>
-<li><span class="fas fa-plus text-muted fa-li"></span><span class="nowrap">13% on</span> the portion of your taxable income that is more <span class="nowrap">than $161,086</span>&nbsp;but not more than <span class="nowrap">$214,781</span>,<strong> plus</strong></li>
-<li><span class="fas fa-plus text-muted fa-li"></span><span class="nowrap">14% on</span> the portion of your taxable income that is more <span class="nowrap">than $214,781</span>&nbsp;but not more <span class="nowrap">than $322,171</span>, <strong>plus</strong></li>
-<li><span class="fas fa-plus text-muted fa-li"></span><span class="nowrap">15% on</span> the portion of your taxable income that is more <span class="nowrap">than $322,171</span></li>
+         <ul>
+<li>the portion of your taxable income that <span class="nowrap">is $134,238</span>&nbsp;or less, <strong>plus</strong></li>
+<li> <span class="nowrap">12% on</span> the portion of your taxable income that is more <span class="nowrap">than $134,238</span>&nbsp;but not more <span class="nowrap">than $161,086</span>, <strong>plus</strong></li>
+<li><span class="nowrap">13% on</span> the portion of your taxable income that is more <span class="nowrap">than $161,086</span>&nbsp;but not more than <span class="nowrap">$214,781</span>,<strong> plus</strong></li>
+<li><span class="nowrap">14% on</span> the portion of your taxable income that is more <span class="nowrap">than $214,781</span>&nbsp;but not more <span class="nowrap">than $322,171</span>, <strong>plus</strong></li>
+<li><span class="nowrap">15% on</span> the portion of your taxable income that is more <span class="nowrap">than $322,171</span></li>
 <li class="brdr-tp"><mark><span class="fas fa-equals text-muted fa-li"></span>Alberta tax on taxable income</span></mark></li>
 
 </ul>
@@ -508,7 +509,7 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
 		  </li>
 		  </ol>
 				 <h2 id="h-5">Send CRA the tax return</h2>
-				 <p>To make sure you get your payments on time, you (and your spouse or common-law partner) need to file your <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5015-r.html"><span class="nowrap">2022 Income</span> Tax and Benefit Return</a>(s) <span class="nowrap">by April 30, 2023.</span> The <abbr title="Canada Revenue Agency">CRA</abbr> will use the information from your return(s) to calculate the payments you are entitled to get from this program.</p>
+				 <p><mark>You can file your completed tax return with the Canada Revenue Agency (CRA) online or by mail.</mark></p>
 <p><mark>Refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/sending-a-tax-return.html">Send us your tax return</a></mark></p>
 			   
 			  <h2 id="h-6">Prior years</h2>
