--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -14,8 +14,8 @@
          <!-- Meta data -->
          <!-- Meta data-->
          <!-- Load closure template scripts -->
-		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_39/cdts/compiled/soyutils.js"></script>
-		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_39/cdts/compiled/wet-en.js"></script>
+		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/soyutils.js"></script>
+		<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_47/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
          <link href="../css/cews.css" rel="stylesheet">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
@@ -782,7 +782,7 @@ margin-left: 38px;
               <ul class="gc-navseq">
                 <li><a href="who-file.html">Who must file a return and pay the tax</span></a></li>
 		      <li><a href="when-file.html">When to file the return and pay the tax</span></a></li>
-		      <li class="active"><a aria-current="page"><a href="complete-return.html">Complete the return</span></a></li>
+		      <li class="active"><a aria-current="page">Complete the return</a></li>
                 <li><a href="file-return.html">File the return</span></a></li>
                 <li><a href="pay-tax.html">Pay the tax</span></a></li>
                 <li><a href="contact.html">Contact us</span></a></li>
@@ -984,14 +984,14 @@ margin-left: 38px;
 	<li><h3>Part 4 - Exemption for primary place of residence</h3>
 		<p>Only owners who are <strong>individuals</strong> may qualify for this exemption.</p>
 		<p>To be eligible for this exemption, you must file the election in <a href="#part-3">Part 3</a>, Section 2 or 3.</p>
-		<p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#primary-res">Primary place of residence</a></p>
+		<p><a class="wb-lbx" href="#primary-res-ajax">Primary place of <span class="nowrap">residence<span class="far fa-question-circle mrgn-lft-sm"></span></span></a></p>
 </li>
 
 
 	
 	<li><h3>Part 5 - Exemption for qualifying occupancy</h3>
 		<p>To be eligible for this exemption, you must file the election in <a href="#part-3">Part 3</a>, Section 2 or 3.</p>
-	<p><a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#qual-occ">Qualifying occupancy</a></p>
+	<p><a class="wb-lbx" href="#qual-occ-ajax">Qualifying <span class="nowrap">occupancy<span class="far fa-question-circle mrgn-lft-sm"></span></span></a></p>
 		
 </li>
 
@@ -1071,8 +1071,22 @@ margin-left: 38px;
 
 	
 </ol>	 
-		
-		 
+<section id="primary-res-ajax" class="mfp-hide modal-dialog modal-content overlay-def">
+			<header class="modal-header">
+				<h2 class="modal-title">Primary place of residence</h2>
+			</header>
+			<div class="modal-body" data-ajax-replace="who-file.html #primary-res-content">
+				
+			</div>
+		</section>		
+	<section id="qual-occ-ajax" class="mfp-hide modal-dialog modal-content overlay-def">
+			<header class="modal-header">
+				<h2 class="modal-title">Primary residences</h2>
+			</header>
+			<div class="modal-body" data-ajax-replace="who-file.html #qual-occ-content">
+				
+			</div>
+		</section>		 
 		 
 		 
 		 
