--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
@@ -89,7 +89,7 @@
             <li><a href="calculate-1.html" class="hidden-xs hidden-sm">Calculate  allowable expenditures</a>
                 <a href="calculate-1.html#gc-document-nav" class="visible-xs visible-sm">Calculate allowable expenditures</a> 
             </li>
-            <li><a href="calculate-2.html" class="hidden-xs hidden-sm">Calculate pool of deductibles</a>
+            <li><a href="calculate-2.html" class="hidden-xs hidden-sm">Calculate pool of deductible expenditures</a>
                 <a href="calculate-2.html#gc-document-nav" class="visible-xs visible-sm">Calculate pool of deductible expenditures</a> 
             </li>
             <li><a href="calculate-3.html" class="active" aria-current="page">Calculate qualified expenditures</a>
