--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
@@ -86,10 +86,10 @@
             <li><a href="get-form.html" class="hidden-xs hidden-sm">Get the T661 expenditures claim form</a>
 				<a href="get-form.html" class="visible-xs visible-sm">Get the T661 expenditures claim form</a> 
             </li>
-            <li><a href="calculate-1.html" class="hidden-xs hidden-sm">Calculate  allowable expenditures</a>
+            <li><a href="calculate-1.html" class="hidden-xs hidden-sm">Calculate allowable expenditures</a>
                 <a href="calculate-1.html#gc-document-nav" class="visible-xs visible-sm">Calculate allowable expenditures</a> 
             </li>
-            <li><a href="calculate-2.html" class="hidden-xs hidden-sm">Calculate  pool of deductibles</a>
+            <li><a href="calculate-2.html" class="hidden-xs hidden-sm">Calculate pool of deductible expenditures</a>
                 <a href="calculate-2.html#gc-document-nav" class="visible-xs visible-sm">Calculate pool of deductible expenditures</a> 
             </li>
             <li><a href="calculate-3.html" class="hidden-xs hidden-sm">Calculate qualified expenditures</a>
