new form design

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -135,14 +135,12 @@
                         </ul>
 
 <h3><mark>Determine which form to use</mark></h3>
-<p><mark>You will fill out <strong>either</strong> Form AB428 or Form T2203:</mark></p>
-<dl class="dl-horizontal">
-  <dt><span class="far fa-file text-muted"></span> <span class="nowrap">Form AB428</span>, Alberta Tax and Credits</dt><dd>
-  
- 
-       
-<p>Complete <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html">Form&nbsp;AB428</a></span> if <strong>one</strong> of the following applies:</p>
+
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+  <li class="cnjnctn-col-70">
+    <h4 class="mrgn-tp-sm text-muted"><span class="far fa-file text-muted"></span> <span class="nowrap">Form AB428</span>, Alberta Tax and Credits<span class="wb-inv">: Option 1</span></h4>
+   <p>Complete <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html">Form&nbsp;AB428</a></span> if <strong>one</strong> of the following applies:</p>
+<ul class="list-unstyled cnjnctn-type-or brdr-0 mrgn-lft-lg">
   <li class="cnjnctn-col-40">You were a resident of Alberta at the end of the year</li>
   <li class="cnjnctn-col">You were a non-resident of Canada <span class="nowrap">in 2022</span> and <strong>any</strong> of the following applies:<ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span>You earned income from employment in Alberta</li>
@@ -150,28 +148,35 @@
 </ul>
 </li>
 </ul>
- </dd>
-  <dt><span class="far fa-file text-muted"></span> Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</dt><dd>
-    
-  
-
-<p>Complete <a href="/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</a> <strong>instead</strong> of <span class="nowrap">Form AB428,</span> if:
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+  </li>
+  <li class="cnjnctn-col">
+    <h4 class="mrgn-tp-sm text-muted"><span class="far fa-file text-muted"></span>  Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions<span class="wb-inv">: Option 2</span></h4>
+    <p>Complete <a href="/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</a> <strong>instead</strong> of <span class="nowrap">Form AB428,</span> if:</p>
+<ul class="list-unstyled cnjnctn-type-or  brdr-0  mrgn-lft-lg">
   <li class="cnjnctn-col-40"><strong>Both</strong> of the following apply:
 <ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span> You resided in Alberta on <span class="nowrap">December 31, 2022</span> (or the date you left Canada if you emigrated <span class="nowrap">in 2022)</span></li>
 <li><span class="fas fa-check text-success fa-li"></span> All or part of <span class="nowrap">your 2022</span> business income (including income received as a retired, inactive, or limited partner) was earned and can be allocated to a permanent establishment <strong>outside</strong> Alberta</li>
 </ul>
 </li>
- <li class="cnjnctn-col-40"><strong>Both</strong> of the following apply:</p>
+ <li class="cnjnctn-col-40"><strong>Both</strong> of the following apply:
 <ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li"></span> You were a non-resident of Canada throughout 2022</li>
 <li><span class="fas fa-check text-success fa-li"></span> You were carrying on business in <strong>more than one</strong> province or territory in Canada or were receiving income from an office or employment that can reasonably be attributed to duties performed in <strong>more than one</strong> province or territory in Canada</li>
 </ul>
 </li>
 </ul>
-</dd>
-</dl>
+  </li>
+</ul>
+
+
+
+
+
+
+
+
+
 
     <h4>Defintions</h4>
 
